day 8, misc cleanups